oh yeah, thats why I stopped making UIs in html

--- a/testdoc2-C.html
+++ b/testdoc2-C.html
@@ -5,6 +5,7 @@
 		<meta http-equiv='Content-Type' content='text/html; charset=UTF-8'>
 		<meta http-equiv='X-UA-Compatible' content='IE=edge'>
 		<link rel='stylesheet' type='text/css' href='html\browser\common.css'>
+		<link rel='stylesheet' type='text/css' href='html\browser\cool.css'>
 
 	</head>
 	<body scroll=auto>
@@ -204,29 +205,29 @@
 						<a class='ColorBoxxo' style='background-color: #FFFFFF'>
 							#FFFFFF
 						</a>
-						<a class='SmolButton'>
+						<a class='SmolBox'>
 							📲
 						</a>
-						<a class='SmolButton'>
+						<a class='SmolBox'>
 							🍑
 						</a>
-						<a class='SmolButton'>
+						<a class='SmolBox'>
 							X
 						</a>
 					</div>
 				</div>
 				<div class='SettingFlexCol' style='flex-basis: 50%;'>
 					<div class='SettingNameCol'>Backpack Type</div>
-					<a href='?_src_=prefs;preference=edit;edit=voice' class='SettingFlexCol'>Wierd shell thing</a>
+					<a href='?_src_=prefs;preference=edit;edit=voice' class='SettingValue'>Wierd shell thing</a>
 				</div>
 				<div class='SettingFlexCol' style='flex-basis: 50%;'>
 					<div class='SettingNameCol'>Persistent Scars</div>
 					<div class='SettingValueSplit'>
 						<div class='SettingFlexCol' style='flex-basis: 50%;'>
-							<a href='?_src_=prefs;preference=edit;edit=voice' class='SettingFlexCol'>Yes</a>
+							<a href='?_src_=prefs;preference=edit;edit=voice' class='SettingValue'>Yes</a>
 						</div>
 						<div class='SettingFlexCol' style='flex-basis: 50%;'>
-							<a href='?_src_=prefs;preference=edit;edit=voice' class='SettingFlexCol'>Clear em?</a>
+							<a href='?_src_=prefs;preference=edit;edit=voice' class='SettingValue'>Clear em?</a>
 						</div>
 					</div>
 				</div>
@@ -239,7 +240,7 @@
 							<div class='SettingNameCol'>
 								Strength
 							</div>
-							<a href='?_src_=prefs;preference=edit;edit=voice' class='SettingFlexCol'>
+							<a href='?_src_=prefs;preference=edit;edit=voice' class=''>
 								5
 							</a>
 						</div>
@@ -247,7 +248,7 @@
 							<div class='SettingNameCol'>
 								Dexterity
 							</div>
-							<a href='?_src_=prefs;preference=edit;edit=voice' class='SettingFlexCol'>
+							<a href='?_src_=prefs;preference=edit;edit=voice' class=''>
 								5
 							</a>
 						</div>
@@ -255,7 +256,7 @@
 							<div class='SettingNameCol'>
 								Constitution
 							</div>
-							<a href='?_src_=prefs;preference=edit;edit=voice' class='SettingFlexCol'>
+							<a href='?_src_=prefs;preference=edit;edit=voice' class=''>
 								5
 							</a>
 						</div>
@@ -263,7 +264,7 @@
 							<div class='SettingNameCol'>
 								Intelligence
 							</div>
-							<a href='?_src_=prefs;preference=edit;edit=voice' class='SettingFlexCol'>
+							<a href='?_src_=prefs;preference=edit;edit=voice' class=''>
 								5
 							</a>
 						</div>
@@ -271,7 +272,7 @@
 							<div class='SettingNameCol'>
 								Wisdom
 							</div>
-							<a href='?_src_=prefs;preference=edit;edit=voice' class='SettingFlexCol'>
+							<a href='?_src_=prefs;preference=edit;edit=voice' class=''>
 								5
 							</a>
 						</div>
@@ -279,8 +280,16 @@
 							<div class='SettingNameCol'>
 								Charisma
 							</div>
-							<a href='?_src_=prefs;preference=edit;edit=voice' class='SettingFlexCol'>
+							<a href='?_src_=prefs;preference=edit;edit=voice' class=''>
 								5
+							</a>
+						</div>
+						<div class='SettingFlexCol'>
+							<div class='SettingNameCol'>
+								Total
+							</div>
+							<a href='?_src_=prefs;preference=edit;edit=voice' class=''>
+								30 / 40
 							</a>
 						</div>
 					</div>
