--- a/testdoc2-D.html
+++ b/testdoc2-D.html
@@ -194,10 +194,10 @@
 								<a class='ColorBoxxo'>
 									#FFFFFF
 								</a>
-								<a class='SmolButton'>
+								<a class='SmolBox'>
 									📲
 								</a>
-								<a class='SmolButton'>
+								<a class='SmolBox'>
 									🍑
 								</a>
 							</div>
@@ -208,10 +208,10 @@
 								<a class='ColorBoxxo'>
 									#FFFFFF
 								</a>
-								<a class='SmolButton'>
+								<a class='SmolBox'>
 									📲
 								</a>
-								<a class='SmolButton'>
+								<a class='SmolBox'>
 									🍑
 								</a>
 							</div>
@@ -222,10 +222,10 @@
 								<a class='ColorBoxxo'>
 									#FFFFFF
 								</a>
-								<a class='SmolButton'>
+								<a class='SmolBox'>
 									📲
 								</a>
-								<a class='SmolButton'>
+								<a class='SmolBox'>
 									🍑
 								</a>
 							</div>
@@ -242,13 +242,13 @@
 								<a class='ColorBoxxo'>
 									#FFFFFF
 								</a>
-								<a class='SmolButton'>
+								<a class='SmolBox'>
 									📲
 								</a>
-								<a class='SmolButton'>
+								<a class='SmolBox'>
 									🍑
 								</a>
-								<a class='SmolButton'>
+								<a class='SmolBox'>
 									X
 								</a>
 							</div>
@@ -294,13 +294,13 @@
 								<a class='ColorBoxxo' style='background-color: #FFFFFF;'>
 									#FFFFFF
 								</a>
-								<a class='SmolButton'>
+								<a class='SmolBox'>
 									📲
 								</a>
-								<a class='SmolButton'>
+								<a class='SmolBox'>
 									🍑
 								</a>
-								<a class='SmolButton'>
+								<a class='SmolBox'>
 									X
 								</a>
 							</div>
@@ -317,19 +317,19 @@
 							<div class='SettingName'>
 								Meat (doesnt do anything)
 							</div>
-							<a href='bingus'>
+							<a href='bingus' class='SmolButton'>
 								Avian
 							</a>
 							<div class='SettingName'>
 								Taste:
 							</div>
-							<a href='bingus'>
+							<a href='bingus' class='SmolButton'>
 								Chicken
 							</a>
 							<div class='SettingName'>
 								Smell:
 							</div>
-							<a href='bingus'>
+							<a href='bingus' class='SmolButton'>
 								Vaginabold
 							</a>
 						</div>
