--- a/testdoc2-E.html
+++ b/testdoc2-E.html
@@ -198,10 +198,10 @@
 							<a class='ColorBoxxo'>
 								#FFFFFF
 							</a>
-							<a class='SmolButton'>
+							<a class='SmolBox'>
 								📲
 							</a>
-							<a class='SmolButton'>
+							<a class='SmolBox'>
 								🍑
 							</a>
 						</div>
@@ -212,10 +212,10 @@
 							<a class='ColorBoxxo'>
 								#FFFFFF
 							</a>
-							<a class='SmolButton'>
+							<a class='SmolBox'>
 								📲
 							</a>
-							<a class='SmolButton'>
+							<a class='SmolBox'>
 								🍑
 							</a>
 						</div>
@@ -226,10 +226,10 @@
 							<a class='ColorBoxxo'>
 								#FFFFFF
 							</a>
-							<a class='SmolButton'>
+							<a class='SmolBox'>
 								📲
 							</a>
-							<a class='SmolButton'>
+							<a class='SmolBox'>
 								🍑
 							</a>
 						</div>
@@ -246,13 +246,13 @@
 							<a class='ColorBoxxo'>
 								#FFFFFF
 							</a>
-							<a class='SmolButton'>
+							<a class='SmolBox'>
 								📲
 							</a>
-							<a class='SmolButton'>
+							<a class='SmolBox'>
 								🍑
 							</a>
-							<a class='SmolButton'>
+							<a class='SmolBox'>
 								X
 							</a>
 						</div>
@@ -267,10 +267,10 @@
 							<div class='SettingNameCol'>
 								Style:
 							</div>
-							<a class='SmolButton'>
+							<a class='SmolBox'>
 								<
 							</a>
-							<a class='SmolButton'>
+							<a class='SmolBox'>
 								>
 							</a>
 							<a href='uwu'>
@@ -283,13 +283,13 @@
 								<a class='ColorBoxxo' style='background-color: #FFFFFF'>
 									#FFFFFF
 								</a>
-								<a class='SmolButton'>
+								<a class='SmolBox'>
 									📲
 								</a>
-								<a class='SmolButton'>
+								<a class='SmolBox'>
 									🍑
 								</a>
-								<a class='SmolButton'>
+								<a class='SmolBox'>
 									X
 								</a>
 							</div>
@@ -300,13 +300,13 @@
 								<a class='ColorBoxxo' style='background-color: #FFFFFF'>
 									#FFFFFF
 								</a>
-								<a class='SmolButton'>
+								<a class='SmolBox'>
 									📲
 								</a>
-								<a class='SmolButton'>
+								<a class='SmolBox'>
 									🍑
 								</a>
-								<a class='SmolButton'>
+								<a class='SmolBox'>
 									X
 								</a>
 							</div>
@@ -320,10 +320,10 @@
 							<div class='SettingNameCol'>
 								Style:
 							</div>
-							<a class='SmolButton'>
+							<a class='SmolBox'>
 								<
 							</a>
-							<a class='SmolButton'>
+							<a class='SmolBox'>
 								>
 							</a>
 							<a href='uwu'>
@@ -337,13 +337,13 @@
 								<a class='ColorBoxxo' style='background-color: #FFFFFF'>
 									#FFFFFF
 								</a>
-								<a class='SmolButton'>
+								<a class='SmolBox'>
 									📲
 								</a>
-								<a class='SmolButton'>
+								<a class='SmolBox'>
 									🍑
 								</a>
-								<a class='SmolButton'>
+								<a class='SmolBox'>
 									X
 								</a>
 							</div>
@@ -352,10 +352,10 @@
 							<div class='SettingNameCol'>
 								Gradient:
 							</div>
-							<a class='SmolButton'>
+							<a class='SmolBox'>
 								<
 							</a>
-							<a class='SmolButton'>
+							<a class='SmolBox'>
 								>
 							</a>
 							<a href='uwu'>
@@ -368,13 +368,13 @@
 								<a class='ColorBoxxo' style='background-color: #FFFFFF'>
 									#FFFFFF
 								</a>
-								<a class='SmolButton'>
+								<a class='SmolBox'>
 									📲
 								</a>
-								<a class='SmolButton'>
+								<a class='SmolBox'>
 									🍑
 								</a>
-								<a class='SmolButton'>
+								<a class='SmolBox'>
 									X
 								</a>
 							</div>
@@ -388,10 +388,10 @@
 							<div class='SettingNameCol'>
 								Style:
 							</div>
-							<a class='SmolButton'>
+							<a class='SmolBox'>
 								<
 							</a>
-							<a class='SmolButton'>
+							<a class='SmolBox'>
 								>
 							</a>
 							<a href='uwu'>
@@ -405,13 +405,13 @@
 								<a class='ColorBoxxo' style='background-color: #FFFFFF'>
 									#FFFFFF
 								</a>
-								<a class='SmolButton'>
+								<a class='SmolBox'>
 									📲
 								</a>
-								<a class='SmolButton'>
+								<a class='SmolBox'>
 									🍑
 								</a>
-								<a class='SmolButton'>
+								<a class='SmolBox'>
 									X
 								</a>
 							</div>
@@ -420,10 +420,10 @@
 							<div class='SettingNameCol'>
 								Gradient:
 							</div>
-							<a class='SmolButton'>
+							<a class='SmolBox'>
 								<
 							</a>
-							<a class='SmolButton'>
+							<a class='SmolBox'>
 								>
 							</a>
 							<a href='uwu'>
@@ -436,13 +436,13 @@
 								<a class='ColorBoxxo' style='background-color: #FFFFFF'>
 									#FFFFFF
 								</a>
-								<a class='SmolButton'>
+								<a class='SmolBox'>
 									📲
 								</a>
-								<a class='SmolButton'>
+								<a class='SmolBox'>
 									🍑
 								</a>
-								<a class='SmolButton'>
+								<a class='SmolBox'>
 									X
 								</a>
 							</div>
@@ -456,10 +456,10 @@
 							<div class='SettingNameCol'>
 								Style:
 							</div>
-							<a class='SmolButton'>
+							<a class='SmolBox'>
 								<
 							</a>
-							<a class='SmolButton'>
+							<a class='SmolBox'>
 								>
 							</a>
 							<a href='uwu'>
@@ -473,13 +473,13 @@
 								<a class='ColorBoxxo' style='background-color: #FFFFFF'>
 									#FFFFFF
 								</a>
-								<a class='SmolButton'>
+								<a class='SmolBox'>
 									📲
 								</a>
-								<a class='SmolButton'>
+								<a class='SmolBox'>
 									🍑
 								</a>
-								<a class='SmolButton'>
+								<a class='SmolBox'>
 									X
 								</a>
 							</div>
