--- a/testdoc2-F.html
+++ b/testdoc2-F.html
@@ -5,6 +5,7 @@
 		<meta http-equiv='Content-Type' content='text/html; charset=UTF-8'>
 		<meta http-equiv='X-UA-Compatible' content='IE=edge'>
 		<link rel='stylesheet' type='text/css' href='html\browser\common.css'>
+		<link rel='stylesheet' type='text/css' href='html\browser\cool.css'>
 
 	</head>
 	<body scroll=auto>
@@ -198,10 +199,10 @@
 							<a class='ColorBoxxo'>
 								#FFFFFF
 							</a>
-							<a class='SmolButton'>
+							<a class='SmolBox'>
 								📲
 							</a>
-							<a class='SmolButton'>
+							<a class='SmolBox'>
 								🍑
 							</a>
 						</div>
@@ -212,10 +213,10 @@
 							<a class='ColorBoxxo'>
 								#FFFFFF
 							</a>
-							<a class='SmolButton'>
+							<a class='SmolBox'>
 								📲
 							</a>
-							<a class='SmolButton'>
+							<a class='SmolBox'>
 								🍑
 							</a>
 						</div>
@@ -226,33 +227,31 @@
 							<a class='ColorBoxxo'>
 								#FFFFFF
 							</a>
-							<a class='SmolButton'>
+							<a class='SmolBox'>
 								📲
 							</a>
-							<a class='SmolButton'>
+							<a class='SmolBox'>
 								🍑
 							</a>
 						</div>
 						<span class='Spacer'>
 						</span>
-						<div class='SettingFlex' style='white-space: nowrap;'>
-							<a>
-								Showing Undies
-							</a>
-						</div>
+						<a class='SettingName' style='white-space: nowrap;'>
+							Showing Undies
+						</a>
 					</div>
 					<div class='SettingValueSplit'>
 						<div class='ColorContainer'>
 							<a class='ColorBoxxo'>
 								#FFFFFF
 							</a>
-							<a class='SmolButton'>
+							<a class='SmolBox'>
 								📲
 							</a>
-							<a class='SmolButton'>
+							<a class='SmolBox'>
 								🍑
 							</a>
-							<a class='SmolButton'>
+							<a class='SmolBox'>
 								X
 							</a>
 						</div>
@@ -260,13 +259,13 @@
 							<a class='ColorBoxxo'>
 								#FFFFFF
 							</a>
-							<a class='SmolButton'>
+							<a class='SmolBox'>
 								📲
 							</a>
-							<a class='SmolButton'>
+							<a class='SmolBox'>
 								🍑
 							</a>
-							<a class='SmolButton'>
+							<a class='SmolBox'>
 								X
 							</a>
 						</div>
@@ -276,6 +275,14 @@
 
 
 				<div class='SettingArray'>
+					<div class='SettingFlexCol'>
+						<div class='SettingValueSplit'>
+							<a class='SmolBox'>
+								Show Mismatched Parts
+							</a>
+							<span class='Spacer'></span>
+						</div>
+					</div>
 					<div class='PartsContainer'>
 						<div class='PartsFlex'>
 							<div class='SettingFlexCol'>
@@ -286,10 +293,10 @@
 									<div class='SettingNameCol'>
 										Style:
 									</div>
-									<a class='SmolButton'>
+									<a class='SmolBox'>
 										<
 									</a>
-									<a class='SmolButton'>
+									<a class='SmolBox'>
 										>
 									</a>
 									<a href='uwu'>
@@ -305,13 +312,13 @@
 										<a class='ColorBoxxo' style='background-color: #FFFFFF'>
 											#FFFFFF
 										</a>
-										<a class='SmolButton'>
+										<a class='SmolBox'>
 											📲
 										</a>
-										<a class='SmolButton'>
+										<a class='SmolBox'>
 											🍑
 										</a>
-										<a class='SmolButton'>
+										<a class='SmolBox'>
 											X
 										</a>
 									</div>
@@ -324,13 +331,13 @@
 										<a class='ColorBoxxo' style='background-color: #FFFFFF'>
 											#FFFFFF
 										</a>
-										<a class='SmolButton'>
+										<a class='SmolBox'>
 											📲
 										</a>
-										<a class='SmolButton'>
+										<a class='SmolBox'>
 											🍑
 										</a>
-										<a class='SmolButton'>
+										<a class='SmolBox'>
 											X
 										</a>
 									</div>
@@ -344,13 +351,13 @@
 										<a class='ColorBoxxo' style='background-color: #FFFFFF'>
 											#FFFFFF
 										</a>
-										<a class='SmolButton'>
+										<a class='SmolBox'>
 											📲
 										</a>
-										<a class='SmolButton'>
+										<a class='SmolBox'>
 											🍑
 										</a>
-										<a class='SmolButton'>
+										<a class='SmolBox'>
 											X
 										</a>
 									</div>
@@ -366,10 +373,10 @@
 									<div class='SettingNameCol'>
 										Style:
 									</div>
-									<a class='SmolButton'>
+									<a class='SmolBox'>
 										<
 									</a>
-									<a class='SmolButton'>
+									<a class='SmolBox'>
 										>
 									</a>
 									<a href='uwu'>
@@ -385,13 +392,13 @@
 										<a class='ColorBoxxo' style='background-color: #FFFFFF'>
 											#FFFFFF
 										</a>
-										<a class='SmolButton'>
+										<a class='SmolBox'>
 											📲
 										</a>
-										<a class='SmolButton'>
+										<a class='SmolBox'>
 											🍑
 										</a>
-										<a class='SmolButton'>
+										<a class='SmolBox'>
 											X
 										</a>
 									</div>
@@ -404,13 +411,13 @@
 										<a class='ColorBoxxo' style='background-color: #FFFFFF'>
 											#FFFFFF
 										</a>
-										<a class='SmolButton'>
+										<a class='SmolBox'>
 											📲
 										</a>
-										<a class='SmolButton'>
+										<a class='SmolBox'>
 											🍑
 										</a>
-										<a class='SmolButton'>
+										<a class='SmolBox'>
 											X
 										</a>
 									</div>
@@ -429,10 +436,10 @@
 									<div class='SettingNameCol'>
 										Style:
 									</div>
-									<a class='SmolButton'>
+									<a class='SmolBox'>
 										<
 									</a>
-									<a class='SmolButton'>
+									<a class='SmolBox'>
 										>
 									</a>
 									<a href='uwu'>
@@ -448,13 +455,13 @@
 										<a class='ColorBoxxo' style='background-color: #FFFFFF'>
 											#FFFFFF
 										</a>
-										<a class='SmolButton'>
+										<a class='SmolBox'>
 											📲
 										</a>
-										<a class='SmolButton'>
+										<a class='SmolBox'>
 											🍑
 										</a>
-										<a class='SmolButton'>
+										<a class='SmolBox'>
 											X
 										</a>
 									</div>
@@ -467,13 +474,13 @@
 										<a class='ColorBoxxo' style='background-color: #FFFFFF'>
 											#FFFFFF
 										</a>
-										<a class='SmolButton'>
+										<a class='SmolBox'>
 											📲
 										</a>
-										<a class='SmolButton'>
+										<a class='SmolBox'>
 											🍑
 										</a>
-										<a class='SmolButton'>
+										<a class='SmolBox'>
 											X
 										</a>
 									</div>
@@ -487,13 +494,13 @@
 										<a class='ColorBoxxo' style='background-color: #FFFFFF'>
 											#FFFFFF
 										</a>
-										<a class='SmolButton'>
+										<a class='SmolBox'>
 											📲
 										</a>
-										<a class='SmolButton'>
+										<a class='SmolBox'>
 											🍑
 										</a>
-										<a class='SmolButton'>
+										<a class='SmolBox'>
 											X
 										</a>
 									</div>
@@ -509,14 +516,14 @@
 									<div class='SettingNameCol'>
 										Style:
 									</div>
-									<a class='SmolButton'>
+									<a class='SmolBox'>
 										<
 									</a>
-									<a class='SmolButton'>
+									<a class='SmolBox'>
 										>
 									</a>
 									<a href='uwu'>
-										Gronchimonchibonchimohtnghumumn
+										ohtngh umumn
 									</a>
 
 								</div>
@@ -528,13 +535,13 @@
 										<a class='ColorBoxxo' style='background-color: #FFFFFF'>
 											#FFFFFF
 										</a>
-										<a class='SmolButton'>
+										<a class='SmolBox'>
 											📲
 										</a>
-										<a class='SmolButton'>
+										<a class='SmolBox'>
 											🍑
 										</a>
-										<a class='SmolButton'>
+										<a class='SmolBox'>
 											X
 										</a>
 									</div>
@@ -547,13 +554,13 @@
 										<a class='ColorBoxxo' style='background-color: #FFFFFF'>
 											#FFFFFF
 										</a>
-										<a class='SmolButton'>
+										<a class='SmolBox'>
 											📲
 										</a>
-										<a class='SmolButton'>
+										<a class='SmolBox'>
 											🍑
 										</a>
-										<a class='SmolButton'>
+										<a class='SmolBox'>
 											X
 										</a>
 									</div>
@@ -567,13 +574,13 @@
 										<a class='ColorBoxxo' style='background-color: #FFFFFF'>
 											#FFFFFF
 										</a>
-										<a class='SmolButton'>
+										<a class='SmolBox'>
 											📲
 										</a>
-										<a class='SmolButton'>
+										<a class='SmolBox'>
 											🍑
 										</a>
-										<a class='SmolButton'>
+										<a class='SmolBox'>
 											X
 										</a>
 									</div>
@@ -589,10 +596,10 @@
 									<div class='SettingNameCol'>
 										Style:
 									</div>
-									<a class='SmolButton'>
+									<a class='SmolBox'>
 										<
 									</a>
-									<a class='SmolButton'>
+									<a class='SmolBox'>
 										>
 									</a>
 									<a href='uwu'>
@@ -608,13 +615,13 @@
 										<a class='ColorBoxxo' style='background-color: #FFFFFF'>
 											#FFFFFF
 										</a>
-										<a class='SmolButton'>
+										<a class='SmolBox'>
 											📲
 										</a>
-										<a class='SmolButton'>
+										<a class='SmolBox'>
 											🍑
 										</a>
-										<a class='SmolButton'>
+										<a class='SmolBox'>
 											X
 										</a>
 									</div>
@@ -627,13 +634,13 @@
 										<a class='ColorBoxxo' style='background-color: #FFFFFF'>
 											#FFFFFF
 										</a>
-										<a class='SmolButton'>
+										<a class='SmolBox'>
 											📲
 										</a>
-										<a class='SmolButton'>
+										<a class='SmolBox'>
 											🍑
 										</a>
-										<a class='SmolButton'>
+										<a class='SmolBox'>
 											X
 										</a>
 									</div>
@@ -647,18 +654,20 @@
 										<a class='ColorBoxxo' style='background-color: #FFFFFF'>
 											#FFFFFF
 										</a>
-										<a class='SmolButton'>
+										<a class='SmolBox'>
 											📲
 										</a>
-										<a class='SmolButton'>
+										<a class='SmolBox'>
 											🍑
 										</a>
-										<a class='SmolButton'>
+										<a class='SmolBox'>
 											X
 										</a>
 									</div>
 								</div>
 							</div>
+						</div>
+						<div class='PartsSpacer'>
 						</div>
 					</div>
 				</div>
@@ -672,7 +681,7 @@
 								Left Arm:
 							</div>
 
-							<a class='SmolButton'>
+							<a class='SmolBox'>
 								X
 							</a>
 							<a href='uwu'>
@@ -683,7 +692,7 @@
 							<div class='SettingNameCol'>
 								Right Arm:
 							</div>
-							<a class='SmolButton'>
+							<a class='SmolBox'>
 								X
 							</a>
 							<a href='uwu'>
