--- a/testdoc2-G.html
+++ b/testdoc2-G.html
@@ -131,24 +131,21 @@
 			<center>
 				<table class='TabHeader'>
 					<tr>
-						<td>
+						<td colspan=2>
 							<a href='?_src_=prefs;preference=tab;tab=PPT_CHARCTER_PROPERTIES'>Properties</a>
 						</td>
-						<td class='TabCellselected'>
+						<td class='TabCellselected' colspan=2>
 							<a href='?_src_=prefs;preference=tab;tab=PPT_CHARCTER_APPEARANCE'>Appearance</a>
 						</td>
 						<td>
 							<a href='?_src_=prefs;preference=tab;tab=PPT_LOADOUT'>Loadout</a>
-						</td>
+						</td colspan=2>
 					</tr>
 					<tr>
-						<td>
+						<td colspan=3>
 							<a href='?_src_=prefs;preference=tab;tab=PPT_GAME_PREFERENCES'>Game Settings</a>
 						</td>
-						<td>
-							<a href='?_src_=prefs;preference=tab;tab=PPT_ADULT_PREFERENCES'>Adult Settings</a>
-						</td>
-						<td>
+						<td colspan=3>
 							<a href='?_src_=prefs;preference=tab;tab=PPT_KEYBINDINGS'>Keybindings</a>
 						</td>
 					</tr>
@@ -198,10 +195,10 @@
 							<a class='ColorBoxxo'>
 								#FFFFFF
 							</a>
-							<a class='SmolButton'>
+							<a class='SmolBox'>
 								📲
 							</a>
-							<a class='SmolButton'>
+							<a class='SmolBox'>
 								🍑
 							</a>
 						</div>
@@ -212,10 +209,10 @@
 							<a class='ColorBoxxo'>
 								#FFFFFF
 							</a>
-							<a class='SmolButton'>
+							<a class='SmolBox'>
 								📲
 							</a>
-							<a class='SmolButton'>
+							<a class='SmolBox'>
 								🍑
 							</a>
 						</div>
@@ -226,10 +223,10 @@
 							<a class='ColorBoxxo'>
 								#FFFFFF
 							</a>
-							<a class='SmolButton'>
+							<a class='SmolBox'>
 								📲
 							</a>
-							<a class='SmolButton'>
+							<a class='SmolBox'>
 								🍑
 							</a>
 						</div>
@@ -246,13 +243,13 @@
 							<a class='ColorBoxxo'>
 								#FFFFFF
 							</a>
-							<a class='SmolButton'>
+							<a class='SmolBox'>
 								📲
 							</a>
-							<a class='SmolButton'>
+							<a class='SmolBox'>
 								🍑
 							</a>
-							<a class='SmolButton'>
+							<a class='SmolBox'>
 								X
 							</a>
 						</div>
@@ -271,19 +268,19 @@
 								Left Arm:
 							</div>
 
-							<a class='SmolButton'>
+							<a class='SmolBox'>
 								X
 							</a>
-							<a class='SmolButton'>
+							<a class='SmolBox'>
 								&uarr;
 							</a>
-							<a class='SmolButton'>
+							<a class='SmolBox'>
 								&darr;
 							</a>
-							<a class='SmolButton'>
+							<a class='SmolBox'>
 								<
 							</a>
-							<a class='SmolButton'>
+							<a class='SmolBox'>
 								>
 							</a>
 							<a href='uwu'>
@@ -298,10 +295,10 @@
 								<a class='ColorBoxxo' style='background-color: #FFFFFF'>
 									#FFFFFF
 								</a>
-								<a class='SmolButton'>
+								<a class='SmolBox'>
 									📲
 								</a>
-								<a class='SmolButton'>
+								<a class='SmolBox'>
 									🍑
 								</a>
 							</div>
@@ -312,10 +309,10 @@
 								<a class='ColorBoxxo' style='background-color: #FFFFFF'>
 									#FFFFFF
 								</a>
-								<a class='SmolButton'>
+								<a class='SmolBox'>
 									📲
 								</a>
-								<a class='SmolButton'>
+								<a class='SmolBox'>
 									🍑
 								</a>
 							</div>
@@ -326,10 +323,10 @@
 								<a class='ColorBoxxo' style='background-color: #FFFFFF'>
 									#FFFFFF
 								</a>
-								<a class='SmolButton'>
+								<a class='SmolBox'>
 									📲
 								</a>
-								<a class='SmolButton'>
+								<a class='SmolBox'>
 									🍑
 								</a>
 							</div>
@@ -341,19 +338,19 @@
 								Right Arm:
 							</div>
 
-							<a class='SmolButton'>
+							<a class='SmolBox'>
 								X
 							</a>
-							<a class='SmolButton'>
+							<a class='SmolBox'>
 								&uarr;
 							</a>
-							<a class='SmolButton'>
+							<a class='SmolBox'>
 								&darr;
 							</a>
-							<a class='SmolButton'>
+							<a class='SmolBox'>
 								<
 							</a>
-							<a class='SmolButton'>
+							<a class='SmolBox'>
 								>
 							</a>
 							<a href='uwu'>
@@ -368,10 +365,10 @@
 								<a class='ColorBoxxo' style='background-color: #FFFFFF'>
 									#FFFFFF
 								</a>
-								<a class='SmolButton'>
+								<a class='SmolBox'>
 									📲
 								</a>
-								<a class='SmolButton'>
+								<a class='SmolBox'>
 									🍑
 								</a>
 							</div>
@@ -382,10 +379,10 @@
 								<a class='ColorBoxxo' style='background-color: #FFFFFF'>
 									#FFFFFF
 								</a>
-								<a class='SmolButton'>
+								<a class='SmolBox'>
 									📲
 								</a>
-								<a class='SmolButton'>
+								<a class='SmolBox'>
 									🍑
 								</a>
 							</div>
@@ -396,20 +393,16 @@
 								<a class='ColorBoxxo' style='background-color: #FFFFFF'>
 									#FFFFFF
 								</a>
-								<a class='SmolButton'>
+								<a class='SmolBox'>
 									📲
 								</a>
-								<a class='SmolButton'>
+								<a class='SmolBox'>
 									🍑
 								</a>
 							</div>
 						</div>
 						<div class='CoolDivider'>
 						</div>
-
-
-
-
 						<div class='SettingValueSplit'>
 
 							<a href='uwu'>
