--- a/testdoc2-J.html
+++ b/testdoc2-J.html
@@ -231,10 +231,10 @@
 							<a class='ColorBoxxo'>
 								#FFFFFF
 							</a>
-							<a class='SmolButton'>
+							<a class='SmolBox'>
 								<i class='fa fa-copy'></i>
 							</a>
-							<a class='SmolButton'>
+							<a class='SmolBox'>
 								<i class='fa fa-paste'></i>
 							</a>
 						</div>
@@ -245,10 +245,10 @@
 							<a class='ColorBoxxo'>
 								#FFFFFF
 							</a>
-							<a class='SmolButton'>
+							<a class='SmolBox'>
 								<i class='fa fa-copy'></i>
 							</a>
-							<a class='SmolButton'>
+							<a class='SmolBox'>
 								<i class='fa fa-paste'></i>
 							</a>
 						</div>
@@ -259,10 +259,10 @@
 							<a class='ColorBoxxo'>
 								#FFFFFF
 							</a>
-							<a class='SmolButton'>
+							<a class='SmolBox'>
 								<i class='fa fa-copy'></i>
 							</a>
-							<a class='SmolButton'>
+							<a class='SmolBox'>
 								<i class='fa fa-paste'></i>
 							</a>
 						</div>
@@ -279,13 +279,13 @@
 							<a class='ColorBoxxo'>
 								#FFFFFF
 							</a>
-							<a class='SmolButton'>
+							<a class='SmolBox'>
 								<i class='fa fa-copy'></i>
 							</a>
-							<a class='SmolButton'>
+							<a class='SmolBox'>
 								<i class='fa fa-paste'></i>
 							</a>
-							<a class='SmolButton'>
+							<a class='SmolBox'>
 								X
 							</a>
 						</div>
@@ -313,10 +313,10 @@
 								<a class='ColorBoxxo' style='background-color: #FFFFFF'>
 									#FFFFFF
 								</a>
-								<a class='SmolButton'>
+								<a class='SmolBox'>
 									<i class='fa fa-copy'></i>
 								</a>
-								<a class='SmolButton'>
+								<a class='SmolBox'>
 									<i class='fa fa-paste'></i>
 								</a>
 							</div>
