--- a/testdoc2-L.html
+++ b/testdoc2-L.html
@@ -5,6 +5,7 @@
 		<meta http-equiv='Content-Type' content='text/html; charset=UTF-8'>
 		<meta http-equiv='X-UA-Compatible' content='IE=edge'>
 		<link rel='stylesheet' type='text/css' href='html\browser\common.css'>
+		<link rel='stylesheet' type='text/css' href='html\browser\cool.css'>
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	</head>
 	<body scroll=auto>
@@ -165,10 +166,10 @@
 							<a class='ColorBoxxo'>
 								#FFFFFF
 							</a>
-							<a class='SmolButton'>
+							<a class='SmolBox'>
 								<i class='fa fa-copy'></i>
 							</a>
-							<a class='SmolButton'>
+							<a class='SmolBox'>
 								<i class='fa fa-paste'></i>
 							</a>
 						</div>
@@ -179,10 +180,10 @@
 							<a class='ColorBoxxo'>
 								#FFFFFF
 							</a>
-							<a class='SmolButton'>
+							<a class='SmolBox'>
 								📲
 							</a>
-							<a class='SmolButton'>
+							<a class='SmolBox'>
 								🍑
 							</a>
 						</div>
@@ -193,10 +194,10 @@
 							<a class='ColorBoxxo'>
 								#FFFFFF
 							</a>
-							<a class='SmolButton'>
+							<a class='SmolBox'>
 								📲
 							</a>
-							<a class='SmolButton'>
+							<a class='SmolBox'>
 								🍑
 							</a>
 						</div>
@@ -213,13 +214,13 @@
 							<a class='ColorBoxxo'>
 								#FFFFFF
 							</a>
-							<a class='SmolButton'>
+							<a class='SmolBox'>
 								📲
 							</a>
-							<a class='SmolButton'>
+							<a class='SmolBox'>
 								🍑
 							</a>
-							<a class='SmolButton'>
+							<a class='SmolBox'>
 								X
 							</a>
 						</div>
@@ -233,15 +234,15 @@
 					<div class='SettingName'>
 						You have 10 points!
 					</div>
-					<a class='SmolButton'>
+					<a class='SmolBox'>
 						Reset
 					</a>
 					<span class='Spacer'>
 					</span>
-					<a class='SmolButton'>
+					<a class='SmolBox'>
 						X
 					</a>
-					<a class='SmolButton Wider100'>
+					<a class='SmolBox Wider100'>
 						Search
 					</a>
 				</div>
@@ -329,20 +330,20 @@
 								<a class='ColorBoxxo' style='background-color: #FFFFFF'>
 									#FFFFFF
 								</a>
-								<a class='SmolButton'>
+								<a class='SmolBox'>
 									📲
 								</a>
-								<a class='SmolButton'>
+								<a class='SmolBox'>
 									🍑
 								</a>
-								<a class='SmolButton'>
+								<a class='SmolBox'>
 									X
 								</a>
 							</div>
-							<a class='SmolButton NotSoSmolBox'>
+							<a class='SmolBox NotSoSmolBox'>
 								Edit <br>Name
 							</a>
-							<a class='SmolButton NotSoSmolBox'>
+							<a class='SmolBox NotSoSmolBox'>
 								Edit <br>Desc
 							</a>
 						</div>
@@ -369,20 +370,20 @@
 								<a class='ColorBoxxo' style='background-color: #FFFFFF'>
 									#FFFFFF
 								</a>
-								<a class='SmolButton'>
+								<a class='SmolBox'>
 									📲
 								</a>
-								<a class='SmolButton'>
+								<a class='SmolBox'>
 									🍑
 								</a>
-								<a class='SmolButton'>
+								<a class='SmolBox'>
 									X
 								</a>
 							</div>
-							<a class='SmolButton NotSoSmolBox'>
+							<a class='SmolBox NotSoSmolBox'>
 								Edit <br>Name
 							</a>
-							<a class='SmolButton NotSoSmolBox'>
+							<a class='SmolBox NotSoSmolBox'>
 								Edit <br>Desc
 							</a>
 						</div>
