--- a/testdoc2-H.html
+++ b/testdoc2-H.html
@@ -198,10 +198,10 @@
 							<a class='ColorBoxxo'>
 								#FFFFFF
 							</a>
-							<a class='SmolButton'>
+							<a class='SmolBox'>
 								📲
 							</a>
-							<a class='SmolButton'>
+							<a class='SmolBox'>
 								🍑
 							</a>
 						</div>
@@ -212,10 +212,10 @@
 							<a class='ColorBoxxo'>
 								#FFFFFF
 							</a>
-							<a class='SmolButton'>
+							<a class='SmolBox'>
 								📲
 							</a>
-							<a class='SmolButton'>
+							<a class='SmolBox'>
 								🍑
 							</a>
 						</div>
@@ -226,10 +226,10 @@
 							<a class='ColorBoxxo'>
 								#FFFFFF
 							</a>
-							<a class='SmolButton'>
+							<a class='SmolBox'>
 								📲
 							</a>
-							<a class='SmolButton'>
+							<a class='SmolBox'>
 								🍑
 							</a>
 						</div>
@@ -246,13 +246,13 @@
 							<a class='ColorBoxxo'>
 								#FFFFFF
 							</a>
-							<a class='SmolButton'>
+							<a class='SmolBox'>
 								📲
 							</a>
-							<a class='SmolButton'>
+							<a class='SmolBox'>
 								🍑
 							</a>
-							<a class='SmolButton'>
+							<a class='SmolBox'>
 								X
 							</a>
 						</div>
@@ -271,19 +271,19 @@
 								Left Arm:
 							</div>
 
-							<a class='SmolButton'>
+							<a class='SmolBox'>
 								X
 							</a>
-							<a class='SmolButton'>
+							<a class='SmolBox'>
 								&uarr;
 							</a>
-							<a class='SmolButton'>
+							<a class='SmolBox'>
 								&darr;
 							</a>
-							<a class='SmolButton'>
+							<a class='SmolBox'>
 								<
 							</a>
-							<a class='SmolButton'>
+							<a class='SmolBox'>
 								>
 							</a>
 							<a href='uwu'>
@@ -298,10 +298,10 @@
 								<a class='ColorBoxxo' style='background-color: #FFFFFF'>
 									#FFFFFF
 								</a>
-								<a class='SmolButton'>
+								<a class='SmolBox'>
 									📲
 								</a>
-								<a class='SmolButton'>
+								<a class='SmolBox'>
 									🍑
 								</a>
 							</div>
@@ -312,10 +312,10 @@
 								<a class='ColorBoxxo' style='background-color: #FFFFFF'>
 									#FFFFFF
 								</a>
-								<a class='SmolButton'>
+								<a class='SmolBox'>
 									📲
 								</a>
-								<a class='SmolButton'>
+								<a class='SmolBox'>
 									🍑
 								</a>
 							</div>
@@ -326,10 +326,10 @@
 								<a class='ColorBoxxo' style='background-color: #FFFFFF'>
 									#FFFFFF
 								</a>
-								<a class='SmolButton'>
+								<a class='SmolBox'>
 									📲
 								</a>
-								<a class='SmolButton'>
+								<a class='SmolBox'>
 									🍑
 								</a>
 							</div>
@@ -341,19 +341,19 @@
 								Right Arm:
 							</div>
 
-							<a class='SmolButton'>
+							<a class='SmolBox'>
 								X
 							</a>
-							<a class='SmolButton'>
+							<a class='SmolBox'>
 								&uarr;
 							</a>
-							<a class='SmolButton'>
+							<a class='SmolBox'>
 								&darr;
 							</a>
-							<a class='SmolButton'>
+							<a class='SmolBox'>
 								<
 							</a>
-							<a class='SmolButton'>
+							<a class='SmolBox'>
 								>
 							</a>
 							<a href='uwu'>
@@ -368,10 +368,10 @@
 								<a class='ColorBoxxo' style='background-color: #FFFFFF'>
 									#FFFFFF
 								</a>
-								<a class='SmolButton'>
+								<a class='SmolBox'>
 									📲
 								</a>
-								<a class='SmolButton'>
+								<a class='SmolBox'>
 									🍑
 								</a>
 							</div>
@@ -382,10 +382,10 @@
 								<a class='ColorBoxxo' style='background-color: #FFFFFF'>
 									#FFFFFF
 								</a>
-								<a class='SmolButton'>
+								<a class='SmolBox'>
 									📲
 								</a>
-								<a class='SmolButton'>
+								<a class='SmolBox'>
 									🍑
 								</a>
 							</div>
@@ -396,10 +396,10 @@
 								<a class='ColorBoxxo' style='background-color: #FFFFFF'>
 									#FFFFFF
 								</a>
-								<a class='SmolButton'>
+								<a class='SmolBox'>
 									📲
 								</a>
-								<a class='SmolButton'>
+								<a class='SmolBox'>
 									🍑
 								</a>
 							</div>
