--- a/testdoc2-I.html
+++ b/testdoc2-I.html
@@ -231,10 +231,10 @@
 							<a class='ColorBoxxo'>
 								#FFFFFF
 							</a>
-							<a class='SmolButton'>
+							<a class='SmolBox'>
 								📲
 							</a>
-							<a class='SmolButton'>
+							<a class='SmolBox'>
 								🍑
 							</a>
 						</div>
@@ -245,10 +245,10 @@
 							<a class='ColorBoxxo'>
 								#FFFFFF
 							</a>
-							<a class='SmolButton'>
+							<a class='SmolBox'>
 								📲
 							</a>
-							<a class='SmolButton'>
+							<a class='SmolBox'>
 								🍑
 							</a>
 						</div>
@@ -259,10 +259,10 @@
 							<a class='ColorBoxxo'>
 								#FFFFFF
 							</a>
-							<a class='SmolButton'>
+							<a class='SmolBox'>
 								📲
 							</a>
-							<a class='SmolButton'>
+							<a class='SmolBox'>
 								🍑
 							</a>
 						</div>
@@ -279,13 +279,13 @@
 							<a class='ColorBoxxo'>
 								#FFFFFF
 							</a>
-							<a class='SmolButton'>
+							<a class='SmolBox'>
 								📲
 							</a>
-							<a class='SmolButton'>
+							<a class='SmolBox'>
 								🍑
 							</a>
-							<a class='SmolButton'>
+							<a class='SmolBox'>
 								X
 							</a>
 						</div>
@@ -309,10 +309,10 @@
 										<div class='SettingNameCol'>
 											Style:
 										</div>
-										<a class='SmolButton'>
+										<a class='SmolBox'>
 											<
 										</a>
-										<a class='SmolButton'>
+										<a class='SmolBox'>
 											>
 										</a>
 										<a href='uwu'>
@@ -328,13 +328,13 @@
 											<a class='ColorBoxxo' style='background-color: #FFFFFF'>
 												#FFFFFF
 											</a>
-											<a class='SmolButton'>
+											<a class='SmolBox'>
 												📲
 											</a>
-											<a class='SmolButton'>
+											<a class='SmolBox'>
 												🍑
 											</a>
-											<a class='SmolButton'>
+											<a class='SmolBox'>
 												X
 											</a>
 										</div>
@@ -350,10 +350,10 @@
 										<div class='SettingNameCol'>
 											Style:
 										</div>
-										<a class='SmolButton'>
+										<a class='SmolBox'>
 											<
 										</a>
-										<a class='SmolButton'>
+										<a class='SmolBox'>
 											>
 										</a>
 										<a href='uwu'>
@@ -369,13 +369,13 @@
 											<a class='ColorBoxxo' style='background-color: #FFFFFF'>
 												#FFFFFF
 											</a>
-											<a class='SmolButton'>
+											<a class='SmolBox'>
 												📲
 											</a>
-											<a class='SmolButton'>
+											<a class='SmolBox'>
 												🍑
 											</a>
-											<a class='SmolButton'>
+											<a class='SmolBox'>
 												X
 											</a>
 										</div>
@@ -391,10 +391,10 @@
 										<div class='SettingNameCol'>
 											Style:
 										</div>
-										<a class='SmolButton'>
+										<a class='SmolBox'>
 											<
 										</a>
-										<a class='SmolButton'>
+										<a class='SmolBox'>
 											>
 										</a>
 										<a href='uwu'>
@@ -410,13 +410,13 @@
 											<a class='ColorBoxxo' style='background-color: #FFFFFF'>
 												#FFFFFF
 											</a>
-											<a class='SmolButton'>
+											<a class='SmolBox'>
 												📲
 											</a>
-											<a class='SmolButton'>
+											<a class='SmolBox'>
 												🍑
 											</a>
-											<a class='SmolButton'>
+											<a class='SmolBox'>
 												X
 											</a>
 										</div>
