--- a/testdoc2-K.html
+++ b/testdoc2-K.html
@@ -231,10 +231,10 @@
 							<a class='ColorBoxxo'>
 								#FFFFFF
 							</a>
-							<a class='SmolButton'>
+							<a class='SmolBox'>
 								📲
 							</a>
-							<a class='SmolButton'>
+							<a class='SmolBox'>
 								🍑
 							</a>
 						</div>
@@ -245,10 +245,10 @@
 							<a class='ColorBoxxo'>
 								#FFFFFF
 							</a>
-							<a class='SmolButton'>
+							<a class='SmolBox'>
 								📲
 							</a>
-							<a class='SmolButton'>
+							<a class='SmolBox'>
 								🍑
 							</a>
 						</div>
@@ -259,10 +259,10 @@
 							<a class='ColorBoxxo'>
 								#FFFFFF
 							</a>
-							<a class='SmolButton'>
+							<a class='SmolBox'>
 								📲
 							</a>
-							<a class='SmolButton'>
+							<a class='SmolBox'>
 								🍑
 							</a>
 						</div>
@@ -279,13 +279,13 @@
 							<a class='ColorBoxxo'>
 								#FFFFFF
 							</a>
-							<a class='SmolButton'>
+							<a class='SmolBox'>
 								📲
 							</a>
-							<a class='SmolButton'>
+							<a class='SmolBox'>
 								🍑
 							</a>
-							<a class='SmolButton'>
+							<a class='SmolBox'>
 								X
 							</a>
 						</div>
